# UAP_ML

./: README.md  pyproject.toml
src/: ML_model_train_UAP.ipynb  app.py  model.ipynb  model_train_UAP.ipynb
src/models/: embedding_nn_disaster_model.keras  ft_transformer_disaster_model.pth  label_encoders.pkl  mlp_disaster_model.keras  prediction_results.csv  scaler.pkl
